@@ -1,3 +1,9 @@
+2002-06-03  Richard Boulton <richard@tartarus.org>
+
+	* m4/mpeg2dec.m4: Test for cpuaccel library as well as mpeg2dec
+	  library.  Add appropriate includes before test compile of mpeg2.h
+	  so that compilation succeeds.
+
 2002-05-06  Thomas Vander Stichele <thomas@apestaart.org>
 
   	* GConf stuff : from http://www.gnome.org/projects/gconf/ and eog
